== master

== 0.0.2 / 2008-06-22

* Remove log files from gems
* Don't check length validation constraints if models were loaded prior to the plugin being loaded [grosser]
* Refactor FormHelper extension to allow for others to easily extend the plugin for things like textarea lengths [grosser]
* Add support for tracking validates_size_of validations

== 0.0.1 / 2008-05-05

* Initial public release
* Add documentation
* Remove maxlength attribute for textare tags since it's not valid html
* Don't set the size based on the smart maxlength
* Don't expect columns to exist for every attribute